--- a/src/app/feature/customer/components/forms/form-address/form-address.component.html
+++ b/src/app/feature/customer/components/forms/form-address/form-address.component.html
@@ -138,6 +138,6 @@
         *ngIf="enableButton"
         (click)="submit"
         class="btt-form-address">
-        {{ isEditable() ? 'Salvar' : 'Editar' }}
+        {{ isEditable() ? 'Editar' : 'Salvar' }}
       </button>
 </form>
