--- a/src/app/feature/home/home.component.html
+++ b/src/app/feature/home/home.component.html
@@ -1,5 +1,1 @@
-<form (ngSubmit)="submit()" [formGroup]="form">
-  <button type="submit">
-   submit
- </button>
-</form>
+<table-entities [data]="paymentsToday"/>
