--- a/src/app/feature/product/screens/register/register.component.html
+++ b/src/app/feature/product/screens/register/register.component.html
@@ -1,99 +1,7 @@
-<form (ngSubmit)="onSubmit()" [formGroup]="ProductForm" #formDir="ngForm" class="form-product">   
+  <product-form [formControl]="productFC" />
 
-
-  <advance-chip-listbox [data]="productTypes" formControlName="productType"/>
-
-
-  <mat-form-field appearance="fill" class="input-name">
-    <mat-label>Nome</mat-label>
-    <input type="text" matInput placeholder="Digite o nome do produto..."  formControlName="name">
-    <mat-hint>nome do produto</mat-hint>
-    <mat-error *ngIf="name.errors?.['required']">
-      O nome é obrigatório.
-    </mat-error>
-  </mat-form-field>
-  
-    <mat-form-field class="input-description">
-      <mat-label>Descrição</mat-label>
-      <input type="text" matInput formControlName="description"
-             placeholder="Descrição...">
-      <mat-hint>descrição do produto</mat-hint>
-      <mat-error *ngIf="name.errors?.['required']">
-        A descrição é obrigatória.
-      </mat-error>
-    </mat-form-field>
-  
-    <mat-form-field class="input-reference">
-      <mat-label>Referência</mat-label>
-      <input type="text" matInput formControlName="reference">
-      <mat-hint>referência</mat-hint>
-    </mat-form-field>
-
-    <mat-form-field class="input-barcode">
-      <mat-label>Código de barras</mat-label>
-      <input type="text" matInput formControlName="barcode"
-             placeholder="ler o código do produto...">
-      <mat-hint>código de barras</mat-hint>
-    </mat-form-field>      
-
-    <mat-form-field appearance="fill" class="input-brand">
-      <mat-label>Marca</mat-label>
-      <mat-select formControlName="brand">
-
-        <mat-option (click)="openDialogAddBrand()">
-          Adicionar
-          <mat-icon>add</mat-icon>``
-        </mat-option>
-
-        <mat-option *ngFor="let brand of brands" [value]="brand">
-          {{brand.name}}
-        </mat-option>
-      </mat-select>
-      <mat-hint>selecione marca</mat-hint>
-    </mat-form-field>
-
-    <mat-form-field class="input-price">
-      <mat-label>Preço</mat-label>
-      <input type="text" matInput formControlName="price"
-          prefix="R$ " placeholder="digite o preço...">
-      <mat-hint>preço</mat-hint>
-      <mat-error *ngIf="price.errors?.['required']">
-          O preço é obrigatório.
-        </mat-error>
-    </mat-form-field>   
-        
-    <button mat-raised-button type="submit">Salvar</button>
-
-</form>
-
-
-
-
-
-<!-- 
-
-<mat-chip-listbox aria-label="Fish selection" formControlName="productType">
-    <mat-chip-option *ngFor="let product of productTypes" [value]="product"
-      [removable]="chipRemovable" (removed)="removeChip(product)">
-      {{product.name}}
-      <mat-icon *ngIf="chipRemovable" matChipRemove>cancel</mat-icon>
-    </mat-chip-option>
-
-    <button mat-mini-fab color="accent"
-    class="btt-chip-add" (click)="addChip()">
-      <mat-icon>add</mat-icon>
-    </button>
-
-    <button mat-mini-fab color="warn"
-      class="btt-chip-add">
-      <mat-icon>edit</mat-icon>
-    </button>
-
-    <button mat-mini-fab color="warn"
-      (click)="chipRemovable = !chipRemovable"  class="btt-chip-add">
-      <mat-icon>{{chipRemovable? 'cancel' : 'delete'}}</mat-icon>
-    </button>
-</mat-chip-listbox>
-
-<advance-chip-listbox [data]="productTypes" formControlName="productType"/>
--->
+  <button mat-raised-button
+    (click)="saveProduct()"
+    color="primary">
+    Salvar
+  </button>
