--- a/src/app/feature/customer/components/addresses-details/addresses-details.component.html
+++ b/src/app/feature/customer/components/addresses-details/addresses-details.component.html
@@ -1,9 +1,9 @@
 <!--  Template for Form !  -->
 
-<form-address *ngIf="formOpened; else formClosed"/>
+<form-address *ngIf="!addressFC.disabled; else bttn" [formControl]="addressFC" (submit)="saveAddress()"/>
 
-<ng-template #formClosed>
-    <button mat-raised-button color="primary" (click)="formOpened = true">Novo</button>
+<ng-template #bttn>
+    <button mat-raised-button color="primary" (click)="addressFC.enable()">Novo</button>
 </ng-template>
 
 <!--  Template for List !  -->
