--- a/src/app/feature/customer/components/dialogs/edit-address/edit-address.component.html
+++ b/src/app/feature/customer/components/dialogs/edit-address/edit-address.component.html
@@ -1,8 +1,8 @@
 <h2 mat-dialog-title>Editar endereço {{data.id}}</h2>
 <div mat-dialog-content>
-    <form-address />
+    <form-address [formControl]="addressFC" [enableButton]="false" />
 </div>
 <mat-dialog-actions align="end">
     <button color="warn" mat-button (click)="dialogRef.close()">Cancelar</button>
-    <button color="primary" mat-button [mat-dialog-close]="data" cdkFocusInitial>Salvar</button>
+    <button color="primary" mat-button [mat-dialog-close]="addressFC.value" cdkFocusInitial>Salvar</button>
 </mat-dialog-actions>
