--- a/src/app/feature/customer/components/dialogs/edit-customer/edit-customer.component.html
+++ b/src/app/feature/customer/components/dialogs/edit-customer/edit-customer.component.html
@@ -1,8 +1,8 @@
 <h2 mat-dialog-title>Editar cliente {{data.id}}</h2>
 <div mat-dialog-content>
-    <form-customer/>
+    <form-customer [formControl]="customerFC"/>
 </div>
 <mat-dialog-actions align="end">
     <button color="warn" mat-button (click)="dialogRef.close()">Cancelar</button>
-    <button color="primary" mat-button [mat-dialog-close]="data" cdkFocusInitial>Salvar</button>
+    <button color="primary" mat-button [mat-dialog-close]="customerFC.value" cdkFocusInitial>Salvar</button>
 </mat-dialog-actions>
