--- a/src/app/feature/customer/components/dialogs/order-details/order-details.component.html
+++ b/src/app/feature/customer/components/dialogs/order-details/order-details.component.html
@@ -11,7 +11,7 @@
 
     <div class="table">
         <h1>Produtos</h1>
-        <table-product-order [products]="productsOrdered" [editable]="false"/>
+        <!-- <table-product-order [products]="productsOrdered" [editable]="false"/> -->
     </div>
 </div>
 <mat-dialog-actions align="end">
