--- a/src/app/feature/order/components/dialogs/choose-customer-dialog/choose-customer-dialog.component.html
+++ b/src/app/feature/order/components/dialogs/choose-customer-dialog/choose-customer-dialog.component.html
@@ -1,6 +1,6 @@
 <h1 mat-dialog-title>Escolha cliente</h1>
 <div mat-dialog-content>
-    <table-customer [onlyNames]="true" [customers]="customers" (rowClicked)="customerClicked($event)"/>
+    <table-entities [data]="customers" (rowClicked)="customerClicked($event)"/>
 </div>
 <mat-dialog-actions align="end">
     <button color="warn" mat-button (click)="dialogRef.close()">Cancelar</button>
