--- a/src/app/feature/order/components/dialogs/payment-method/payment-method.component.css
+++ b/src/app/feature/order/components/dialogs/payment-method/payment-method.component.css
@@ -4,11 +4,6 @@
   height: 100%;
 }
 
-h1{
-    margin-bottom: 0px;
-    margin-right: 10px;
-}
-
 input[type=number]::-webkit-inner-spin-button, 
 input[type=number]::-webkit-outer-spin-button { 
   -webkit-appearance: none; 
@@ -40,7 +35,11 @@ order-details-view {
   flex-direction: column;
 }
 
-.matBttnToggle{
+table-payment {
+  grid-area: c;
+}
+
+mat-button-toggle-group {
   margin-bottom: 10px;
 }
 
@@ -63,6 +62,3 @@ order-details-view {
 
 
 
-table-payment {
-  grid-area: c;
-}
