--- a/src/app/feature/order/components/order-section/order-section.component.html
+++ b/src/app/feature/order/components/order-section/order-section.component.html
@@ -1,18 +1,16 @@
 <div class="container">
     <div class="top">
         <div class="actions">
-            <button mat-raised-button color="primary" [disabled]="orderDetails.quantity <= 0" (click)="paymentMethod()">Pagamentos</button>
+            <button mat-raised-button color="primary" [disabled]="quantity() <= 0" (click)="paymentMethod()">Pagamentos</button>
             <button mat-raised-button color="primary" (click)="saveOrder.emit()">Salvar</button>
         </div>
     </div>
 
     <div class="body">
-        <h1>Quantidade itens: {{orderDetails.quantity}}</h1>
-        <h1 [ngStyle]="{'color': orderDetails.returnValue ? 'red' : ''}">Devolução: {{orderDetails.qtyRefund}}</h1>
-        <h1 [ngStyle]="{'color': orderDetails.returnValue ? 'red' : ''}">Valor devolutivo: {{orderDetails.returnValue | currency}}</h1>
-        <h1>Desconto: {{(orderDetails.discounts ? orderDetails.discounts : 0) | percent: '1.2-2' }}</h1>
-        <h1>Valor Bruto: {{orderDetails.grossAmount | currency}}</h1>
-        <h1>Valor líquido: {{orderDetails.netAmount | currency}}</h1>
+        <h1>Quantidade itens: {{quantity()}}</h1>
+        <h1>Desconto: {{discounts() | percent: '1.2-2' }}</h1>
+        <h1>Valor Bruto: {{grossAmount() | currency}}</h1>
+        <h1>Valor líquido: {{netAmount() | currency}}</h1>
     </div>
 </div>
 
