--- a/src/app/shared/components/tables/table-entities/table-entities.component.html
+++ b/src/app/shared/components/tables/table-entities/table-entities.component.html
@@ -4,29 +4,27 @@
     <ng-container matColumnDef="select">
       <th mat-header-cell *matHeaderCellDef>
         <mat-checkbox (change)="$event ? toggleAllRows() : null"
-                      [checked]="selection.hasValue() && isAllSelected()"
-                      [indeterminate]="selection.hasValue() && !isAllSelected()"
+                      [checked]="hasSelected() && isAllSelected()"
+                      [indeterminate]="hasSelected() && !isAllSelected()"
                       [aria-label]="checkboxLabel()">
         </mat-checkbox>
       </th>
       <td mat-cell *matCellDef="let row">
         <mat-checkbox (click)="$event.stopPropagation()"
-                      (change)="$event ? selection.toggle(row) : null"
-                      [checked]="selection.isSelected(row)"
+                      (change)="$event ? toggle(row) : null"
+                      [checked]="selected().has(row)"
                       [aria-label]="checkboxLabel(row)">
         </mat-checkbox>
       </td>
     </ng-container>
-
   
     <ng-container *ngFor="let item of displayColumns | keyvalue" [matColumnDef]="item.key">
       <th mat-header-cell *matHeaderCellDef> {{item.value}} </th>
       <td mat-cell *matCellDef="let element"> {{element[item.key] }} </td>
     </ng-container>
   
-  
     <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"
-        (click)="selectable ? selection.toggle(row) : rowClicked.next(row)">
+        (click)="selectable ? toggle(row) : rowClicked.next(row)">
     </tr>
 </table>
