--- a/src/app/shared/components/tables/table-product-order/table-product-order.component.html
+++ b/src/app/shared/components/tables/table-product-order/table-product-order.component.html
@@ -27,25 +27,28 @@
     <!-- Name Column -->
     <ng-container matColumnDef="name">
       <th mat-header-cell *matHeaderCellDef> Nome </th>
-      <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+      <td mat-cell *matCellDef="let element"> {{element.product.name}} </td>
     </ng-container>
 
     <!-- Price Column -->
     <ng-container matColumnDef="price">
       <th mat-header-cell *matHeaderCellDef> P. Un </th>
-      <td mat-cell *matCellDef="let element"> {{element.price | currency}} </td>
+      <td mat-cell *matCellDef="let element"> {{element.product.price | currency}} </td>
     </ng-container>
 
     <!-- Price Column -->
     <ng-container matColumnDef="grossAmount">
       <th mat-header-cell *matHeaderCellDef> V. Bruto </th>
-      <td mat-cell *matCellDef="let element"> {{element.grossAmount | currency}} </td>
+      <td mat-cell *matCellDef="let element"> {{(element.product.price * element.quantity) | currency}} </td>
     </ng-container>
+
 
     <!-- Net Value Column -->
     <ng-container matColumnDef="netValue">
       <th mat-header-cell *matHeaderCellDef> V. Líq </th>
-      <td mat-cell *matCellDef="let element"> {{element.netAmount | currency}} </td>
+      <td mat-cell *matCellDef="let element"> {{
+        (element.product.price * element.quantity) - 
+        ((element.product.price * element.quantity) * element.discounts) | currency}} </td>
     </ng-container>
 
     <!-- Price Column -->
@@ -66,7 +69,7 @@
       <td mat-cell *matCellDef="let element">
         <ng-container *ngIf="editable; else quantityTD">
           <mat-form-field appearance="outline" class="mat-form-field-quantity">
-            <input matInput type="number" [(ngModel)]="element.quantity" (input)="setQuantity(element)">
+            <input matInput type="number" [(ngModel)]="element.quantity" (ngModelChange)="changeQty.next()">
           </mat-form-field>
         </ng-container>
         <ng-template #quantityTD>
@@ -84,10 +87,7 @@
           <mat-icon>more_vert</mat-icon>
         </button>
         <mat-menu #menu="matMenu">
-          <button mat-menu-item (click)="returnProduct(element)">
-            {{element.isRefund ? 'Deixar' : 'Devolver'}}
-          </button>
-          <button mat-menu-item (click)="deductProduct(element)">Descontar</button>
+          <!-- <button mat-menu-item (click)="deductProduct(element)">Descontar</button> -->
           <button mat-menu-item (click)="editProduct(element)">Editar</button>
         </mat-menu>
       </td>
