--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -39,6 +39,13 @@
             <a>Pedido</a>
           </button>
         </mat-list-item>
+
+        <mat-list-item>
+          <button [routerLink]="['/dashboard']" routerLinkActive="LinkActive" class="sidenav-btt">
+            <mat-icon>data_usage</mat-icon>
+            <a>Vendas</a>
+          </button>
+        </mat-list-item>
         
       </mat-list>
     </div>
