--- a/src/app/feature/customer/screens/register/register.component.html
+++ b/src/app/feature/customer/screens/register/register.component.html
@@ -44,9 +44,7 @@
                     </button>
                 </div>
     
-                <table-entities 
-                    [data]="dependents"
-                    #tdependents/>
+                <table-entities [data]="dependents"#tdependents/>
             </div>
         </mat-step>
         
