--- a/src/app/feature/home/home.component.html
+++ b/src/app/feature/home/home.component.html
@@ -1,1 +1,7 @@
-<table-entities [data]="paymentsToday"/>
+<h2>Valor a receber hoje: {{valueToday() | currency: 'BRL'}}</h2>
+
+<h3>Valores a serem pagos hoje</h3>
+<table-entities 
+    [data]="paymentsToday()" 
+    (rowClicked)="searchPayment($event)"
+    [displayColumns]="displayColumns"/>
