--- a/src/app/feature/customer/components/dialogs/order-details/order-details.component.html
+++ b/src/app/feature/customer/components/dialogs/order-details/order-details.component.html
@@ -12,6 +12,8 @@
     <div class="table">
         <h1>Produtos</h1>
         <!-- <table-product-order [products]="productsOrdered" [editable]="false"/> -->
+        <table-entities [data]="data.productOrders"
+            [displayColumns]="displayColumns" />
     </div>
 </div>
 <mat-dialog-actions align="end">
