--- a/src/app/feature/order/components/dialogs/payment-method/payment-method.component.html
+++ b/src/app/feature/order/components/dialogs/payment-method/payment-method.component.html
@@ -1,4 +1,4 @@
-<h1 mat-dialog-title>Escolhe forma de pagamento !</h1>
+<h1 mat-dialog-title>Pagamentos</h1>
 
 <div mat-dialog-content class="content">
 
@@ -6,50 +6,17 @@
 
   <div class="controls">
 
-    <mat-button-toggle-group (change)="changeBttnToggle($event)">
-      <mat-button-toggle value="inCash">Á Vista</mat-button-toggle>
-      <mat-button-toggle value="installments">Parcelado</mat-button-toggle>
-    </mat-button-toggle-group>
+      <mat-form-field appearance="fill" class="mat-form-field-amount">
+        <mat-label>Digite número de parcelas que deseja</mat-label>
+        <input type="number" matInput [formControl]="input">
+      </mat-form-field>
 
-    <div class="container-details">
-      <div class="input-bttn">
-        <mat-form-field class="example-full-width" [formControl]="inputValue">
-          <mat-label>{{paymentMethod === 'inCash' ? 'Digite o valor' : 'Digite as parcelas'}}</mat-label>
-          <input matInput #message type="number">
-          <mat-hint align="start"><strong>Digite o valor</strong> </mat-hint>
-        </mat-form-field>
-
-        <button *ngIf="paymentMethod === 'installments'"
-         mat-icon-button color="accent" (click)="resetPayments()">
-          <mat-icon>autorenew</mat-icon>
-        </button>
-      </div>
-
-      <div class="result">
-        <h1>Troco: {{ changeAmount || 0 | currency}}</h1>
-        <h1>Faltando: {{ missing || 0 | currency}}</h1>
-      </div>
-
-      <ng-container *ngIf="paymentMethod !== 'installments'">
-        <advance-chip-listbox [source]="paymentTypes" [formControl]="paymentType" />
-        <button mat-raised-button color="primary" (click)="cashPayment()">
-          Pagar
-        </button>
-      </ng-container>
-    </div>
   </div>
 
-  <table-payment 
-    [payments]="payments"
-    [paintPayed]="true"
-    [paymentTypes]="paymentTypes"
-    [editable]="paymentMethod !== 'inCash' ? true : false"
-    [displayColumns]="displayedColumns"
-    [changePayment]="changePaymentFunction.bind(this)"/>
-
+  <table-payment [data]="payments" [paymentTypes]="paymentTypes" [editable]="true"/>
 
 </div>
 <mat-dialog-actions align="end">
-  <button color="warn" mat-button (click)="dialogRef.close()">Cancelar</button>
-  <button mat-raised-button color="primary" [mat-dialog-close]="payments">Salvar</button>
+  <button color="warn" mat-button (click)="canceled()">Cancelar</button>
+  <button  color="primary" mat-button (click)="close()">Salvar</button>
 </mat-dialog-actions>
