--- a/src/app/feature/order/order.component.css
+++ b/src/app/feature/order/order.component.css
@@ -2,7 +2,7 @@
     box-sizing: border-box;
     background-color: burlywood;
     display: grid;
-    grid-template-columns: auto 40%;
+    grid-template-columns: 30% 1fr;
     grid-template-rows: 50% auto;
     grid-template-areas: 
         "a a"
@@ -14,7 +14,7 @@
 }
 
 
-table-order{
+table-product-order{
     grid-area: a;
 }
 
