--- a/src/app/shared/components/tables/table-entities/table-entities.component.html
+++ b/src/app/shared/components/tables/table-entities/table-entities.component.html
@@ -18,9 +18,9 @@
       </td>
     </ng-container>
   
-    <ng-container *ngFor="let item of displayColumns | keyvalue" [matColumnDef]="item.key">
-      <th mat-header-cell *matHeaderCellDef> {{item.value}} </th>
-      <td mat-cell *matCellDef="let element"> {{element[item.key] }} </td>
+    <ng-container *ngFor="let item of displayColumns" [matColumnDef]="item.key">
+      <th mat-header-cell *matHeaderCellDef> {{item.label}} </th>
+      <td mat-cell *matCellDef="let element"> {{ formatData(element, item) }} </td>
     </ng-container>
   
     <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></tr>
