--- a/src/app/shared/components/tables/table-product-order/table-product-order.component.html
+++ b/src/app/shared/components/tables/table-product-order/table-product-order.component.html
@@ -1,9 +1,9 @@
 <div class="box-buttons" *ngIf="editable">
-  <button mat-raised-button color="primary">Primary</button>
-  <button mat-raised-button color="accent">Accent</button>
   <button mat-raised-button color="warn" (click)="delete()">
     {{displayedColumns.includes('select') ? (selection.hasValue() ? 'Excluir' : 'Cancelar') : 'Apagar'}}
   </button>
+  <button mat-raised-button color="accent">Accent</button>
+  <button mat-raised-button color="primary" (click)="dialogProducts()">Produtos</button>
 </div>
 
 <div class="box-table">
@@ -24,52 +24,42 @@
       </td>
     </ng-container>
 
-    <!-- Name Column -->
     <ng-container matColumnDef="name">
       <th mat-header-cell *matHeaderCellDef> Nome </th>
       <td mat-cell *matCellDef="let element"> {{element.product.name}} </td>
     </ng-container>
 
-    <!-- Price Column -->
     <ng-container matColumnDef="price">
       <th mat-header-cell *matHeaderCellDef> P. Un </th>
       <td mat-cell *matCellDef="let element"> {{element.product.price | currency}} </td>
     </ng-container>
 
-    <!-- Price Column -->
     <ng-container matColumnDef="grossAmount">
       <th mat-header-cell *matHeaderCellDef> V. Bruto </th>
-      <td mat-cell *matCellDef="let element"> {{(element.product.price * element.quantity) | currency}} </td>
+      <td mat-cell *matCellDef="let element"> {{ element.grossAmount | currency}} </td>
     </ng-container>
 
-
-    <!-- Net Value Column -->
     <ng-container matColumnDef="netValue">
       <th mat-header-cell *matHeaderCellDef> V. Líq </th>
-      <td mat-cell *matCellDef="let element"> {{
-        (element.product.price * element.quantity) - 
-        ((element.product.price * element.quantity) * element.discounts) | currency}} </td>
+      <td mat-cell *matCellDef="let element"> {{ element.netAmount | currency}} </td>
     </ng-container>
 
-    <!-- Price Column -->
     <ng-container matColumnDef="discounts">
       <th mat-header-cell *matHeaderCellDef> Descontos </th>
       <td mat-cell *matCellDef="let element"> {{element.discounts | percent: '1.2-2' }} </td>
     </ng-container>
 
-    <!-- Promotion Column -->
     <ng-container matColumnDef="promotion">
       <th mat-header-cell *matHeaderCellDef> Promoção </th>
       <td mat-cell *matCellDef="let element"> {{element.promotion | percent: '1.2-2' }} </td>
     </ng-container>
 
-    <!-- Quantity Column -->
     <ng-container matColumnDef="quantity">
       <th mat-header-cell *matHeaderCellDef>Quantidade</th>
       <td mat-cell *matCellDef="let element">
         <ng-container *ngIf="editable; else quantityTD">
           <mat-form-field appearance="outline" class="mat-form-field-quantity">
-            <input matInput type="number" [(ngModel)]="element.quantity" (ngModelChange)="changeQty.next()">
+            <input matInput type="number" [(ngModel)]="element.quantity">
           </mat-form-field>
         </ng-container>
         <ng-template #quantityTD>
@@ -78,8 +68,6 @@
       </td>
     </ng-container>
 
-
-    <!-- Options Column -->
     <ng-container matColumnDef="options" *ngIf="editable">
       <th mat-header-cell *matHeaderCellDef>Options</th>
       <td mat-cell *matCellDef="let element">
@@ -87,7 +75,7 @@
           <mat-icon>more_vert</mat-icon>
         </button>
         <mat-menu #menu="matMenu">
-          <!-- <button mat-menu-item (click)="deductProduct(element)">Descontar</button> -->
+          <button mat-menu-item (click)="deductProduct(element)">Descontar</button>
           <button mat-menu-item (click)="editProduct(element)">Editar</button>
         </mat-menu>
       </td>
