--- a/src/app/feature/product/components/forms/product-form/product-form.component.html
+++ b/src/app/feature/product/components/forms/product-form/product-form.component.html
@@ -110,7 +110,8 @@
         <button mat-raised-button
           *ngIf="displaySubmit"
           color="primary"
-          class="bttn-save">
+          class="bttn-save"
+          (click)="onSubmit()">
           Salvar
         </button>
 </form>
