--- a/src/app/feature/customer/screens/register/register.component.css
+++ b/src/app/feature/customer/screens/register/register.component.css
@@ -7,12 +7,12 @@
     justify-items: center;
     gap: 20px 0px;
     padding: 30px;
-    background-color: rgb(137, 192, 194);
+    background-color: rgb(190, 196, 196);
 }
 
 .container-customer{
   width: 100%;
-  height: 12%;
+  flex: 1;
   max-width: 1500px;
   display: flex;
   justify-content: center;
@@ -45,8 +45,8 @@ list-address {
 }
 
 .container{
-  height: 88%;
   width: 100%;
+  height: 100%;
   max-width: 1500px;
   position: relative;
   display: flex;
