--- a/src/app/feature/inventory-control/screens/inventory/inventory.component.css
+++ b/src/app/feature/inventory-control/screens/inventory/inventory.component.css
@@ -1,5 +1,5 @@
 :host {
-    background-color: aquamarine;
+    background-color: rgb(190, 196, 196);
     display: flex;
     height: 100%;
     justify-content: center;
