--- a/src/app/feature/inventory-control/screens/quantify-pro/quantify-pro.component.css
+++ b/src/app/feature/inventory-control/screens/quantify-pro/quantify-pro.component.css
@@ -1,5 +1,5 @@
 :host {
-    background-color: aquamarine;
+    background-color: rgb(190, 196, 196);
     display: flex;
     flex-direction: column;
     gap: 10px 0px;
