--- a/src/app/feature/order/order.component.css
+++ b/src/app/feature/order/order.component.css
@@ -1,6 +1,6 @@
 :host{
     box-sizing: border-box;
-    background-color: burlywood;
+    background-color: rgb(190, 196, 196);
     display: grid;
     grid-template-columns: 30% 1fr;
     grid-template-rows: 50% auto;
