--- a/src/app/feature/product/screens/register/register.component.html
+++ b/src/app/feature/product/screens/register/register.component.html
@@ -1,3 +1,4 @@
-
-
-<product-form [formControl]="productFC" [displaySubmit]="true"/>
+<product-form 
+    [formControl]="productFC"
+    [displaySubmit]="true"
+    (submit)="saveProduct()"/>
