--- a/src/app/feature/product/components/forms/product-form/product-form.component.css
+++ b/src/app/feature/product/components/forms/product-form/product-form.component.css
@@ -6,6 +6,12 @@ form {
     gap: 0 10px;
 }
 
+input[type=number]::-webkit-inner-spin-button, 
+input[type=number]::-webkit-outer-spin-button { 
+  -webkit-appearance: none; 
+  margin: 0; 
+}
+
 .chip-list {
     display: flex;
     gap: 0 5px;
