--- a/src/app/feature/product/screens/register/register.component.css
+++ b/src/app/feature/product/screens/register/register.component.css
@@ -5,6 +5,26 @@
     padding: 30px;
 }
 
-button {
-    align-self: flex-end;
+form {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1f 1fr;
+    gap: 0 10px;
+}
+
+input[type=number]::-webkit-inner-spin-button, 
+input[type=number]::-webkit-outer-spin-button { 
+  -webkit-appearance: none; 
+  margin: 0; 
+}
+
+.chip-list {
+    display: flex;
+    gap: 0 5px;
+    grid-column: 1/6;
+    margin-bottom: 20px;
+}
+
+.bttn-save {
+    align-self: center;
 }
