--- a/src/app/feature/product/screens/register/register.component.html
+++ b/src/app/feature/product/screens/register/register.component.html
@@ -1,157 +1,4 @@
-
-    <form [formGroup]="form" (ngSubmit)="saveProduct()" #formDir="ngForm">
-
-        <!-- <div class="chip-list">
-          <mat-chip-listbox formControlName="productType">
-              <mat-chip-option *ngFor="let value of productTypes" [value]="value"
-                [selected]="productType.value?.id === value.id ? true : false"
-                (removed)="openDialogDeleteProductType(value)">
-                {{ value.name }}
-                <button matChipRemove *ngIf="chipRemovable">
-                  <mat-icon>cancel</mat-icon>
-                </button>
-              </mat-chip-option>
-          </mat-chip-listbox>
-        
-          <button mat-mini-fab color="primary"
-            (click)="openDialogAddProductType()">
-            <mat-icon>add</mat-icon>
-          </button>
-          
-          <button mat-mini-fab color="warn"
-            (click)="chipRemovable = !chipRemovable">
-            <mat-icon>delete</mat-icon>
-          </button>
-
-          <mat-error *ngIf="productType.errors?.['required']">
-            O marca é obrigatória.
-          </mat-error>
-        </div> -->
-
-
-
-            <mat-form-field>
-                <mat-label>Escolha o tipo de produto</mat-label>
-                <mat-chip-grid formControlName="productType">
-
-
-                  @for (value of productTypes; track value) {
-                    <mat-chip-row
-                      (removed)="openDialogDeleteProductType(value)"
-                      [editable]="true"
-                      (edited)="edit(value, $event)"
-                      [aria-description]="'press enter to edit ' + value.name">
-                      {{value.name}}
-                      <button matChipRemove [attr.aria-label]="'remove ' + value.name">
-                        <mat-icon>cancel</mat-icon>
-                      </button>
-                    </mat-chip-row>
-                  }
-
-
-                </mat-chip-grid>
-            </mat-form-field>
-
-
-
-
-
-
-
-
-
-
-
-
-    
-        <mat-form-field appearance="fill" class="input-name">
-            <mat-label>Nome</mat-label>
-            <input type="text" matInput placeholder="Digite o nome do produto..." formControlName="name">
-            <mat-hint>nome do produto</mat-hint>
-            <mat-error *ngIf="name.errors?.['required']">
-              O nome é obrigatório.
-            </mat-error>
-          </mat-form-field>
-          
-            <mat-form-field class="input-description">
-              <mat-label>Descrição</mat-label>
-              <input type="text" matInput formControlName="description"
-                     placeholder="Descrição...">
-              <mat-hint>descrição do produto</mat-hint>
-            </mat-form-field>
-          
-            <mat-form-field class="input-reference">
-              <mat-label>Referência</mat-label>
-              <input type="text" matInput formControlName="reference">
-              <mat-hint>referência</mat-hint>
-            </mat-form-field>
-        
-            <mat-form-field class="input-barcode">
-              <mat-label>Código de barras</mat-label>
-              <input type="text" matInput formControlName="barcode"
-                     placeholder="ler o código do produto...">
-              <mat-hint>código de barras</mat-hint>
-            </mat-form-field>      
-        
-            <mat-form-field appearance="fill" class="input-brand">
-              <mat-label>Marca</mat-label>
-              <mat-select formControlName="brand">
-                <mat-option (click)="openDialogAddBrand()">
-                  Adicionar
-                  <mat-icon>add</mat-icon>
-                </mat-option>
-        
-                <mat-option *ngFor="let brand of brands" [value]="brand">
-                  {{brand.name}}
-                </mat-option>
-              </mat-select>
-              <mat-hint>selecione marca</mat-hint>
-              <mat-error *ngIf="brand.errors?.['required']">
-                O marca é obrigatória.
-              </mat-error>
-            </mat-form-field>
-        
-            <mat-form-field class="input-price">
-              <mat-label>Preço</mat-label>
-              <input type="number" matInput formControlName="price"
-                  prefix="R$ " placeholder="digite o preço...">
-              <mat-hint>preço</mat-hint>
-              <mat-error *ngIf="price.errors?.['required']">
-                  O preço é obrigatório.
-                </mat-error>
-            </mat-form-field>   
-    
-            <mat-form-field class="input-quantity">
-              <mat-label>Quantidade</mat-label>
-              <input type="number" matInput formControlName="quantity" placeholder="digite quantitade">
-              <mat-hint>Quantidade</mat-hint>
-              <mat-error *ngIf="price.errors?.['required']">
-                  A quantidade é obrigatória.
-                </mat-error>
-            </mat-form-field>  
-    
-            <mat-form-field class="input-min-quantity">
-              <mat-label>Quantidade mín</mat-label>
-              <input type="number" matInput formControlName="min_quantity" placeholder="digite quantidade mínima">
-              <mat-hint>Quantidade mín</mat-hint>
-              <mat-error *ngIf="price.errors?.['required']">
-                  A quantidade mínima é obrigatória.
-                </mat-error>
-            </mat-form-field>  
-    
-            <mat-form-field class="input-max-quantity">
-              <mat-label>Quantidade máx</mat-label>
-              <input type="number" matInput formControlName="max_quantity" placeholder="digite quantidade máxima">
-              <mat-hint>Quanitdade máx</mat-hint>
-              <mat-error *ngIf="price.errors?.['required']">
-                  A quantidade máxima é obrigatória.
-                </mat-error>
-            </mat-form-field>  
-    
-            <button mat-raised-button
-              color="primary"
-              class="bttn-save"
-              type="submit">
-              Salvar
-            </button>
-    </form>
+<product-form 
+    [formControl]="productFC"
+    [displaySubmit]="true"
+    (submit)="saveProduct()"/>
